Fix gap and delete price

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -108,6 +108,7 @@
 
 .contact-container-footer {
   width: 100% !important;
+  gap: 16px !important;
 }
 
 @media (max-width: 1225px) {
