--- a/src/components/Trading/Trading.css
+++ b/src/components/Trading/Trading.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .crypto-block {
-  height: auto;
+  height: 90vh;
   background-color: #131514;
   background-image: url('../../assets/crypto-bg.png');
   background-size: cover;
@@ -348,6 +348,7 @@
   }
 
   .crypto-block {
+    height: 100%;
     padding: 64px 20px;
   }
 
